# aelf-code-generator

./: .gitignore  README.md  package-lock.json  package.json
agent/: README.md  langgraph.json  pyproject.toml
agent/aelf_code_generator/: __init__.py  __main__.py  agent.py  chat.py  code_generator.py  demo.py  github_analyzer.py  input_node.py  model.py  models.py  prompts.py  review_code.py  state.py  template_selector.py  templates.py  text_to_contract.py  types.py  validation.py
agent/aelf_code_generator/vector_store/faiss_index/: index.pkl
agent/test/: test_agent_with_input.py  test_direct_validation_router.py  test_fix.py  test_full_cycle.py  test_full_workflow.py  test_graph_structure.py  test_minimal_run.py  test_router_direct.py  test_router_termination.py  test_simple_cycle.py  test_validation_flow.py  test_validation_router.py  test_workflow_cycle.py
ui/: .env.local  next.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
ui/.next/: react-loadable-manifest.json  trace
ui/.next/cache/: .rscinfo
ui/.next/server/: middleware-react-loadable-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
ui/.next/server/app/: page.js  page_client-reference-manifest.js
ui/.next/server/vendor-chunks/: @0no-co.js  @babel.js  @copilotkit.js  @floating-ui.js  @lukeed.js  @opentelemetry.js  @radix-ui.js  @react-aria.js  @segment.js  @swc.js  @urql.js  ansi-styles.js  bail.js  ccount.js  chalk.js  class-variance-authority.js  clsx.js  color-convert.js  color-name.js  comma-separated-tokens.js  debug.js  decode-named-character-reference.js  dequal.js  diff.js  dset.js  extend.js  has-flag.js  hast-util-parse-selector.js  hast-util-whitespace.js  jose.js  (+93 more)
ui/src/: server.ts
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/components/: FileExplorer.tsx
ui/src/context/: ContractContext.tsx  EditorContext.tsx
ui/src/data/: audit.ts  client.ts  db.ts  env.ts  graphql.ts  wallet.ts
ui/src/db/: db.ts
ui/src/hooks/: useChat.ts  useCliActions.ts  useFileSystem.ts  useWorkspaces.ts
ui/src/lib/: constants.ts  file.tsx  format-errors.tsx  model-selector-provider.tsx  types.ts  utils.ts
ui/src/providers/: index.tsx
ui/src/types/: index.ts
(+59 files in other folders)
